--- a/src/pages/Projects/Experiments/Bold/BoldInteractiveMap.css
+++ b/src/pages/Projects/Experiments/Bold/BoldInteractiveMap.css
@@ -1,11 +1,11 @@
 /* Responsive 16:9 aspect ratio using padding-top hack */
 .bold-map-container {
   position: relative;
-  /* width: 100%; */
-  /* max-width: 960px; */
+  width: 100%;
+  max-width: 100%;
   height: 0;
   padding-top: 56.25%; /* 540/960 = 0.5625 = 56.25% for 16:9 */
-  /* margin: 2rem auto; */
+  margin: 2rem auto;
   background: url('./images/interdisciplinarity/arrows.png') center center no-repeat;
   background-size: cover;
   overflow: hidden;
